# guru-dev-lang

./: README.md  guru_magic.py  pyproject.toml
gurudev/: compiler.py  lexer.py  parser.py
