# pyproject.toml
[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "guru-dev-lang"
version = "0.1.0"
description = "Multi-paradigm, semantically-rich programming language with grammatical-case syntax and 5-D symbolic coordinates"
authors = [{name = "Guilherme Gonçalves Machado", email = "guilherme.ceo@hubstry.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "lark>=1.1.5",
    "rich>=12.0.0",
]

[project.urls]
Homepage = "https://github.com/Hubstry/guru-dev-lang"
Repository = "https://github.com/Hubstry/guru-dev-lang.git"

[project.scripts]
guruc = "gurudev.cli:cli"
gurudvm = "gurudev.cli:cli"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
gurudev = ["grammar/*.lark"]
